Task5/task5-network-policies.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-api
  namespace: default
spec:
  podSelector:          # к кому применяем правила
    matchLabels:
      role: back-end-api
  policyTypes: [Ingress, Egress]

  # входящий трафик В backend-api — только от фронта
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: front-end

  # исходящий трафик ИЗ backend-api — только к фронту
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: front-end


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-api
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes: [Ingress, Egress]

  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end

  egress:
    - to:
        - podSelector:
            matchLabels:
              role: admin-front-end
